# arrow-simpledb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libdb/: CMakeLists.txt  ChunkedColumnCursor.cpp  ChunkedColumnCursor.h  ColumnCursorWrapper.cpp  ColumnCursorWrapper.h  FilterProjectTableCursor.cpp  FilterProjectTableCursor.h  GreaterThanFilter.cpp  GreaterThanFilter.h  ScanTableCursor.cpp  ScanTableCursor.h  TableCursor.cpp  TableCursor.h
libdb/columns/: BaseColumnCursor.cpp  BaseColumnCursor.h  ChunkedColumnCursor.cpp  ChunkedColumnCursor.h  ChunkedDictColumnCursor.cpp  ChunkedDictColumnCursor.h  ColumnCursorWrapper.cpp  ColumnCursorWrapper.h  ColumnTypeTrait.h  DBSchema.cpp  DBSchema.h  GenericColumnCursor.cpp  GenericColumnCursor.h
libdb/core/: DBSchema.cpp  Status.h
libdb/filters/: AndFilter.cpp  AndFilter.h  Filter.h  GreaterThanFilter.cpp  GreaterThanFilter.h  IsNullFilter.cpp  IsNullFilter.h  LessThanFilter.cpp  LessThanFilter.h  NotFilter.cpp  NotFilter.h
libdb/tables/: DBColumnBuilder.cpp  DBColumnBuilder.h  DBTable.cpp  DBTable.h  FilterProjectTableCursor.cpp  FilterProjectTableCursor.h  ScanTableCursor.cpp  ScanTableCursor.h  TableCursor.h
main/: CMakeLists.txt  main.cpp
testdb/: CMakeLists.txt  TableTest.cpp  TableTest.h  Tables.cpp  Tables.h
